# neural_network_framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
assets/: class_diagram.drawio
core/: __init__.py  dataloader.py  dataset.py  functions.py  layers.py  metrics.py  model.py  optimizer.py  pca.py  trainer.py  transforms.py
data/mnist_small/test/: mnist_test.csv
data/mnist_small/train/: mnist_train.csv
examples/: binary-mnist-classification.py  mnist-classification.py  winequality-binary-classification.py
tests/core/: test_compare_against_pytorch.py  test_dataloader.py  test_dataset.py  test_functions.py  test_layer.py  test_model.py
