[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.0.1"
authors = [
  { name="Patrick Strasser", email="patrick.strasser@stud-mail.uni-wuerzburg.de" },
]
description = "Core repo for the Gesture Control project"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
